--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>?</title>
     <style>
-    html { background: url('/home/mrhxxx/Dokumen/my-project/dark-hole/gambar/111.jpg') 
+    html { background: url('111.jpg') 
 no-repeat center center fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
