--- a/redroom.html
+++ b/redroom.html
@@ -10,7 +10,7 @@
 <style type="text/css">
 @import url("/stylesheet.css");
 
-html { background: url('/home/mrhxxx/Dokumen/my-project/dark-hole/gambar/666.jpg') 
+html { background: url('666.jpg') 
 no-repeat center center fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
