--- a/Rape and murder.html
+++ b/Rape and murder.html
@@ -9,7 +9,7 @@ body {
 	font-size: 14px;
 	line-height: 1.5;
 	color: #eee;
-	background: url("/home/mrhxxx/Dokumen/my-project/dark-hole/gambar/777.jpg") no-repeat top center #000;
+	background: url("777.jpg") no-repeat top center #000;
     margin: auto 0;
     text-align:center;
 }
