Update Rape and murder.html

--- a/Rape and murder.html
+++ b/Rape and murder.html
@@ -110,18 +110,18 @@ img {
     <tbody>
         <tr>
             <td align="center">
-                <video controls="" width="400" height="250"><source src="/home/mrhxxx/Dokumen/my-project/dark-hole/video/1.mp4" type="video/mp4"></video>
+                <video controls="" width="400" height="250"><source src="1.mp4" type="video/mp4"></video>
 	        </td>
             <td align="center">
-                <video controls="" width="400" height="250"><source src="/home/mrhxxx/Dokumen/my-project/dark-hole/video/2.mp4" type="video/mp4"></video>
+                <video controls="" width="400" height="250"><source src="2.mp4" type="video/mp4"></video>
 	        </td>
         </tr>
         <tr>
             <td align="center">
-                <video controls="" width="400" height="250"><source src="/home/mrhxxx/Dokumen/my-project/dark-hole/video/3.mp4" type="video/mp4"></video>
+                <video controls="" width="400" height="250"><source src="3.mp4" type="video/mp4"></video>
 	        </td>
             <td align="center">
-                <video controls="" width="400" height="250"><source src="/home/mrhxxx/Dokumen/my-project/dark-hole/video/4.mp4" type="video/mp4"></video>
+                <video controls="" width="400" height="250"><source src="4.mp4" type="video/mp4"></video>
 	        </td>
         </tr>
                 <tr>
