--- a/fsociety.html
+++ b/fsociety.html
@@ -1,16 +1,19 @@
 <html dir="ltr" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="keywords" content="red room, redroom, rred room, rred rrom, redd room, red romm, reedroom, reed room, redromm, hidden redroom, deep web red room, dark web red room">
 <meta name="description" content="Dark Red Room">
 <meta name="author" content="RED ROOM">
 <title>FSOCIETY</title>
 
-<style type="text/css">
-@import url("/stylesheet.css");
+<style>
+@media screen and (max-width: 768px) {
+  /* Gaya CSS untuk layar dengan lebar maksimum 768px */
+}
 
-html { background: url('999.png') no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+
+html { background: url('/home/mrhxxx/Dokumen/my-project/dark-hole/gambar/999.png') no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
 
 body { font-family: 'Lucida Sans', Helvetica, Verdana, Arial; sans-serif; font-size: 100%; -moz-user-select:none; -webkit-user-select:none; user-select:none; }
 div.transbox {
@@ -68,6 +71,12 @@ h1{
             margin: 0;
           
         }
+        @media screen and (max-width: 768px) {
+  .ascii-text {
+    font-size: 20px;
+  }
+}
+
         .ascii-text {
             white-space: pre;
             font-family: monospace;
