--- a/fsociety.html
+++ b/fsociety.html
@@ -24,7 +24,7 @@
     margin: 10px;
   }
 }
-html { background: url('/home/mrhxxx/Dokumen/my-project/dark-hole/gambar/999.png') no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+html { background: url('999.png') no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
 
 body { font-family: 'Lucida Sans', Helvetica, Verdana, Arial; sans-serif; font-size: 100%; -moz-user-select:none; -webkit-user-select:none; user-select:none; }
 div.transbox {
