--- a/redroom.html
+++ b/redroom.html
@@ -85,7 +85,7 @@ h1{
 		background-color: #f9d6d600;
 	}
 	.jam-digital-malasngoding p {
-		color: #f00;
+		color: black;
 		font-size: 36px;
 		text-align: center;
 		margin-top: 30px;
