--- a/Rape and murder.html
+++ b/Rape and murder.html
@@ -86,7 +86,7 @@ img {
 <p>&nbsp;</p>
 
 
-<h2>MORE THAN 3000 PHOTOS AND VIDEOS!</h2>
+<h2><a>MORE THAN 3000 PHOTOS AND VIDEOS!</a></h2>
 
 <p>&nbsp;</p>
 
