Update Rape and murder.html

--- a/Rape and murder.html
+++ b/Rape and murder.html
@@ -90,7 +90,7 @@ img {
 
 <p>&nbsp;</p>
 
-<h3>Buy access to content</h3> <a href="/order.html">ORDER</a>
+<h3><a>Buy access to content</a></h3> <a href="/order.html">ORDER</a>
 
 <p>&nbsp;</p>
 
