Update Rape and murder.html

--- a/Rape and murder.html
+++ b/Rape and murder.html
@@ -137,7 +137,15 @@ img {
                 <video controls="" width="400" height="250"><source src="7.mp4" type="video/mp4"></video>
 	        </td>
             <td align="center">
-                <video controls="" width="400" height="250"><source src="/imgvid/8.mp4" type="video/mp4"></video>
+                <video controls="" width="400" height="250"><source src="8.mp4" type="video/mp4"></video>
+	        </td>
+        </tr>
+	     <tr>
+            <td align="center">
+                <video controls="" width="400" height="250"><source src="9.mp4" type="video/mp4"></video>
+	        </td>
+            <td align="center">
+                <video controls="" width="400" height="250"><source src="10.mp4" type="video/mp4"></video>
 	        </td>
         </tr>
         <tr>
