--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>?</title>
     <style>
-    html { background: url('222.jpg') 
+    html { background: url('119778.gif') 
 no-repeat center center fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
