--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>?</title>
     <style>
-    html { background: url('119778.gif') 
+    html { background: url('/home/mrhxxx/Dokumen/my-project/dark-hole/gambar/119778.gif') 
 no-repeat center center fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover; 
+}
+
+<style>
+@media screen and (max-width: 768px) {
+  /* Gaya CSS untuk layar dengan lebar maksimum 768px */
+}
+
+@media screen and (max-width: 480px) {
+  /* Gaya CSS untuk layar smartphone */
 }
       body{
       margin: 0;
@@ -135,10 +144,11 @@ nav {
       </nav>
 
     <div class="ring">
-      FSOCIETY
+      Mr.hdyt
       <span></span>
     </div>
     
   
+
 
 </body></html>
