--- a/redroom.html
+++ b/redroom.html
@@ -10,12 +10,17 @@
 <style type="text/css">
 @import url("/stylesheet.css");
 
-html { background: url('666.jpg') 
+html { background: url('/home/mrhxxx/Dokumen/my-project/dark-hole/gambar/666.jpg') 
 no-repeat center center fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover; 
+}
+
+@font-face {
+	font-family: 'DoubleFeature20';
+	src: url('DoubleFeature20.ttf') format('truetype');
 }
 
 body { font-family: 'Lucida Sans', Helvetica, Verdana, Arial; sans-serif; font-size: 100%; -moz-user-select:none; -webkit-user-select:none; user-select:none; }
@@ -117,7 +122,7 @@ h1{
  
 <h1>There are <span class="red"> -10</span> days  <span class="red"> -6 </span> hours <span class="red"> -21</span> min left</h1>
 <h2>  </h2>
-<h1><a href="fsociety.html">HOME</a></h1>
+<h1><a href="/home/mrhxxx/Dokumen/my-project/dark-hole/fsociety.html">HOME</a></h1>
 <h2>
   <p>or</p>
   <p><a href="http://msydqstlz2kzerdg.onion/">LEAVE</a></p>
@@ -137,7 +142,7 @@ h1{
         </tr>
     </tbody>
 </table>
-</a><p style="border-left-width: medium;border-left-style: solid;background-color: #ff0000a3;"><a href="http://ikqmfk5fxdci4oyv.onion/" target="_blank"></a><a href="http://ikqmfk5fxdci4oyv.onion/" target="_blank"><strong></strong></a><strong><a href="Rape and murder.html"><b>click here</b></a></strong></p>
+</a><p style="border-left-width: medium;border-left-style: solid;background-color: #ff0000a3;"><a href="http://ikqmfk5fxdci4oyv.onion/" target="_blank"></a><a href="http://ikqmfk5fxdci4oyv.onion/" target="_blank"><strong></strong></a><strong><a href="/home/mrhxxx/Dokumen/my-project/dark-hole/Rape and murder.html"><b>click here</b></a></strong></p>
 </div>
 
 
