--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>?</title>
     <style>
-    html { background: url('/home/mrhxxx/Dokumen/my-project/dark-hole/gambar/119778.gif') 
+    html { background: url('119778.gif') 
 no-repeat center center fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
@@ -23,7 +23,7 @@ background-size: cover;
       body{
       margin: 0;
       padding: 0;
-      background-color: #000;
+
   }
   .ring{
       position: absolute;
@@ -149,6 +149,5 @@ nav {
     </div>
     
   
-
 
 </body></html>
