--- a/redroom.html
+++ b/redroom.html
@@ -122,10 +122,10 @@ h1{
  
 <h1>There are <span class="red"> -10</span> days  <span class="red"> -6 </span> hours <span class="red"> -21</span> min left</h1>
 <h2>  </h2>
-<h1><a href="/home/mrhxxx/Dokumen/my-project/dark-hole/fsociety.html">HOME</a></h1>
+<h1><a href="fsociety.html">HOME</a></h1>
 <h2>
   <p>or</p>
-  <p><a href="http://msydqstlz2kzerdg.onion/">LEAVE</a></p>
+  <p><a href="google.com">LEAVE</a></p>
   <p></p>
 </h2>
 </div>
@@ -142,7 +142,7 @@ h1{
         </tr>
     </tbody>
 </table>
-</a><p style="border-left-width: medium;border-left-style: solid;background-color: #ff0000a3;"><a href="http://ikqmfk5fxdci4oyv.onion/" target="_blank"></a><a href="http://ikqmfk5fxdci4oyv.onion/" target="_blank"><strong></strong></a><strong><a href="/home/mrhxxx/Dokumen/my-project/dark-hole/Rape and murder.html"><b>click here</b></a></strong></p>
+</a><p style="border-left-width: medium;border-left-style: solid;background-color: #ff0000a3;"><a href="http://ikqmfk5fxdci4oyv.onion/" target="_blank"></a><a href="http://ikqmfk5fxdci4oyv.onion/" target="_blank"><strong></strong></a><strong><a href="Rape and murder.html"><b>click here</b></a></strong></p>
 </div>
 
 
