Update and rename Form Login.html to index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 
 <body>
-  <form action="index.html" method="POST">
+  <form action="loading.html" method="POST">
     <fieldset>
       <legend>Form Login</legend>
       <p>
