--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
      /* CSS media query untuk layar kecil (misalnya, ponsel) */
     @media (max-width: 600px) {
       form {
-        width: 100%; /* Mengisi lebar layar penuh */
+        width: 80%; /* Mengisi lebar layar penuh */
+        height:55%;
       }
     }
   </style>
